cli/tests/snapshots/help__device_remove.snap
---
source: cli/tests/help.rs
expression: "help(&[\"device\", \"remove\"])"
---
Remove one or more devices from a mounted filesystem

Each device can be specified as a block device path, a numeric device ID, the
special token "missing" (to remove a device that is no longer present), or
"cancel" (to cancel an in-progress removal).

The operation requires CAP_SYS_ADMIN.

Usage: remove <ARGS> <ARGS>...

Arguments:
  <ARGS> <ARGS>...
          One or more devices to remove (path, devid, "missing", or "cancel"),
          followed by the filesystem mount point
          
          Example: btrfs device remove /dev/sdb 3 missing /mnt/data

Options:
  -h, --help
          Print help (see a summary with '-h')
