cli/tests/snapshots/help__device_stats.snap
---
source: cli/tests/help.rs
expression: "help(&[\"device\", \"stats\"])"
---
Show device I/O error statistics for all devices of a filesystem

Reads per-device counters for write, read, flush, corruption, and generation
errors. The path can be a mount point or a device belonging to the filesystem.

The operation requires CAP_SYS_ADMIN.

Usage: stats [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem or one of its devices

Options:
  -c, --check
          Return a non-zero exit code if any error counter is greater than zero

  -z, --reset
          Print current values and then atomically reset all counters to zero

  -h, --help
          Print help (see a summary with '-h')
