cli/tests/snapshots/help__filesystem.snap
---
source: cli/tests/help.rs
expression: "help(&[\"filesystem\"])"
---
Overall filesystem tasks and information.

Perform filesystem-level operations including checking available space, disk
usage analysis, defragmentation, resizing, labeling, and synchronization. These
commands provide views into filesystem state and allow configuration of
filesystem-wide settings.

Usage: filesystem <COMMAND>

Commands:
  df            Show space usage information for a mounted filesystem
  du            Summarize disk usage of each file, showing shared extents
  show          Show information about one or more mounted or unmounted
                filesystems
  sync          Force a sync on a mounted filesystem
  defragment    Defragment files or directories on a btrfs filesystem
  resize        Resize a mounted btrfs filesystem
  label         Get or set the label of a btrfs filesystem
  usage         Show detailed information about internal filesystem usage
  mkswapfile    Create a swapfile on a btrfs filesystem
  commit-stats  Show commit statistics for a mounted filesystem
  help          Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
