cli/tests/snapshots/help__filesystem_mkswapfile.snap
---
source: cli/tests/help.rs
expression: "help(&[\"filesystem\", \"mkswapfile\"])"
---
Create a swapfile on a btrfs filesystem

Usage: mkswapfile [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to the swapfile to create

Options:
  -s, --size <SIZE>
          Size of the swapfile
          
          [default: 2G]

  -U, --uuid <UUID>
          UUID to embed in the swap header (clear, random, time, or explicit
          UUID; default: random)

  -h, --help
          Print help
