cli/tests/snapshots/help__filesystem_sync.snap
---
source: cli/tests/help.rs
expression: "help(&[\"filesystem\", \"sync\"])"
---
Force a sync on a mounted filesystem

Usage: sync <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
